[package]
name = "bitoxide"
version = "0.1.0"
author = "F5XS"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
base64 = "0.22.0"
js-sys = "0.3"
lz4_flex = "0.11.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"

[package.metadata.cargo-post.dependencies]
base64 = "0.22"
serde_json = "1.0"
toml = "0.7"
tungstenite = "0.19"
