[package]
name = "ffmpeg_to_ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciify = "0.1.6"
clap = { version = "4.5.4", features = ["derive"] }
diff = "0.1.13"
image = "0.23.8"
lz4 = "1.24.0"
lz4_flex = "0.11.3"
termcolor = "1.4.1"
